--- a/htdocs/content/themes/goldsmith-mortgages/assets/sass/app.scss
+++ b/htdocs/content/themes/goldsmith-mortgages/assets/sass/app.scss
@@ -5,44 +5,44 @@
 @tailwind utilities;
 
 ::-webkit-scrollbar {
-  @apply w-[15px];
+  @apply w-[10px];
 }
 
 ::-webkit-scrollbar-track {
-  @apply bg-white;
+  @apply bg-cape-palliser-300;
 }
 
 ::-webkit-scrollbar-thumb {
-  @apply bg-white;
+  @apply bg-cape-palliser;
 
   &:hover {
-    @apply bg-white;
+    @apply bg-cape-palliser-600;
   }
 }
 
 html {
   body {
-    font-family: roboto, sans-serif;
+    font-family: mencken-std-head, sans-serif;
 
     .font-primary {
-      font-family: roboto, sans-serif;
+      font-family: mencken-std-head, sans-serif;
     }
 
     .font-secondary {
-      font-family: mencken-std-head, sans-serif;
+      font-family: roboto, sans-serif;
     }
   }
 
   &:lang(en-NZ) {
     body {
-      font-family: roboto, sans-serif;
+      font-family: mencken-std-head, sans-serif;
 
       .font-primary {
-        font-family: roboto, sans-serif;
+        font-family: mencken-std-head, sans-serif;
       }
 
       .font-secondary {
-        font-family: mencken-std-head, sans-serif;
+        font-family: roboto, sans-serif;
       }
     }
   }
